--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <br>
 </div>
 <div>
-<img src="imagenes/fotoPerfil.PNG" width="50%" height="50%"> </div>
+<img src="imagenes/foto.jpg" width="50%" height="50%"> </div>
 </div>
 </div>
 <div>
